@@ -662,6 +662,7 @@ of MediaWiki:Newpagetext) to &action=edit, if page is new.
 * (bug 3187) watchlist text refer to unexistent "Stop watching" action
 * (bug 3190) Added some date format choices for language sr
 * (bug 1334) LanguageGa.php update
+* (bug 1020) Changing user interface language does not work immediately
 
 
 === Caveats ===
